# qrl

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-photonic.txt  requirements.txt
docs/: PHILOSOPHY.md  api-reference.md
examples/: bell_inequality.py  graphix_exploration.py  quantum_correlations.py  quickstart.py  teleportation.py
examples/pennylane/: README.md  bell_state.py
examples/quandela/: README.md  bell_state.py  bell_state_path_encoding.py  cloud_test.py  perceval_hello_world.py  qrl_cloud_path_encoding.py
src/: __init__.py
src/qrl/: __init__.py  categorical.py  causal.py  cli.py  core.py  measurement.py  tensor_utils.py
src/qrl/backends/: __init__.py  graphix_adapter.py  pennylane_adapter.py  perceval_adapter.py  perceval_path_adapter.py
src/qrl/compiler/: __init__.py  qiskit_backend.py
src/qrl/domains/: __init__.py  biology.py  chemistry.py  networks.py  sensing.py
tests/: conftest.py  test_adaptive_corrections.py  test_allen_causal_models.py  test_araujo_witness.py  test_bell_physics.py  test_categorical.py  test_cli.py  test_conditional_independence.py  test_core.py  test_cross_basis_measurement.py  test_do_calculus.py  test_domains_biology.py  test_domains_chemistry.py  test_domains_networks.py  test_domains_sensing.py  test_ghz_physics.py  test_graph_extraction.py  test_graphix_adapter.py  test_hensen.py  test_intervene.py  test_pattern_generation.py  test_pennylane_adapter.py  test_perceval_integration.py  test_perceval_path_adapter.py  test_process_matrix.py  test_quantum_switch.py  test_stage1_nqubit.py
(+10 files in other folders)
