[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-relational-language"
version = "0.2.0"
description = "A relations-first quantum programming language with native MBQC compilation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "David Coldeira", email = "dcoldeira@gmail.com"},
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
    "qiskit>=0.40",
    "cirq>=1.0",
    "networkx>=2.6",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "mypy>=0.991",
    "pylint>=2.15",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]
platform = [
    "anthropic>=0.80",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
photonic = [
    "perceval-quandela>=0.11",
    "graphix>=0.3",
]
ml = [
    "pennylane>=0.38",
]

[project.scripts]
qrl = "qrl.cli:main"

[project.urls]
Homepage = "https://github.com/dcoldeira/quantum-relational-language"
Documentation = "https://github.com/dcoldeira/quantum-relational-language/docs"
Repository = "https://github.com/dcoldeira/quantum-relational-language"
"Issue Tracker" = "https://github.com/dcoldeira/quantum-relational-language/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']
